--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "league/flysystem-copy",
+    "name": "nao-pon/flysystem-copy",
     "description": "Flysystem adapter for Copy.com",
     "license": "MIT",
     "authors": [
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.4.0",
         "league/flysystem": "~1.0",
-        "barracuda/copy": "~1.1"
+        "nao-pon/copy": "dev-pilot"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -19,15 +19,10 @@
     },
     "autoload": {
         "psr-4": {
-            "League\\Flysystem\\Copy\\": "src/"
+            "Nao-pon\\Flysystem\\Copy\\": "src/"
         }
     },
     "config": {
         "bin-dir": "bin"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
     }
 }
