update composer.json fix autoload

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Nao-pon\\Flysystem\\Copy\\": "src/"
+            "League\\Flysystem\\Copy\\": "src/"
         }
     },
     "config": {
