--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "nao-pon/flysystem": "dev-pilot",
+        "league/flysystem": "~1.0",
         "nao-pon/copy": "dev-pilot"
     },
     "require-dev": {
