--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=5.4.0",
         "league/flysystem": "~1.0",
-        "nao-pon/copy": "dev-pilot"
+        "nao-pon/copy": "dev-pilot@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
